--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -46,3 +46,11 @@ nav a:hover {
     padding: 20px;
     margin: 20px;
 }
+
+.jumbotron {
+    font-size: 20px;
+    padding: 60px;
+    background-color: #00c8eb;
+    text-align: center;
+    color: white;
+}
