styling the navigation

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -18,6 +18,7 @@ nav a {
     font-size: 18px;
     font-weight: 400;
     text-decoration: none;
+    color: white;
 }
 
 nav a:hover {
@@ -53,4 +54,15 @@ nav a:hover {
     background-color: #00c8eb;
     text-align: center;
     color: white;
+}
+
+nav li {
+    display: inline;
+    list-style-type: none;
+    margin-right: 20px;
+}
+
+nav {
+    background-color: #00a2c6;
+    padding: 5px;
 }
