membuat content dan aside berjejer horizontal

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -72,4 +72,15 @@ nav {
 
 main {
     padding: 20px;
+    overflow: auto;
+}
+
+#content {
+    float: left;
+    width: 75%;
+}
+
+aside {
+    float: right;
+    width: 25%;
 }
