--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Quicksand', sans-serif;
 
@@ -83,4 +87,5 @@ main {
 aside {
     float: right;
     width: 25%;
+    padding-left: 20px;
 }
