--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -63,8 +63,12 @@ nav a:hover {
     color: white;
 }
 
+nav ul {
+    padding-inline: 4rem;
+    display: flex;
+}
+
 nav li {
-    display: inline;
     list-style-type: none;
     margin-right: 20px;
 }
