menggunakan gap dari pada margin utk jarak nav

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -66,11 +66,11 @@ nav a:hover {
 nav ul {
     padding-inline: 4rem;
     display: flex;
+    gap: 2rem;
 }
 
 nav li {
     list-style-type: none;
-    margin-right: 20px;
 }
 
 nav {
