--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -83,18 +83,17 @@ nav {
 
 main {
     padding: 20px;
-    overflow: auto;
+    
+    display: flex;
+    gap: 1.5rem;
 }
 
 #content {
-    float: left;
-    width: 75%;
+    flex: 5;
 }
 
 aside {
-    float: right;
-    width: 25%;
-    padding-left: 20px;
+    flex: 1;
 }
 
 header {
