--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -103,13 +103,6 @@ header {
     display: inline;
 }
 
-@media screen and (max-width: 1000px) {
-    #content, aside {
-        width: 100%;
-        padding: 0;
-    }
-}
-
 @media screen and (max-width: 1200px) {
     main {
         flex-flow: column nowrap;
@@ -117,5 +110,15 @@ header {
 
     main aside {
         align-self: center;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    nav ul {
+        justify-content: center;
+    }
+
+    main aside {
+        align-self: stretch;
     }
 }
