--- a/landingpagedicodingindonesia/css/app.css
+++ b/landingpagedicodingindonesia/css/app.css
@@ -67,3 +67,50 @@ main {
     display: flex;
     align-items: center;
 }
+
+main .content {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+main .content .content-description {
+    flex: 1 1;  /* belum paham fungsi dari ini */
+}
+
+main .content .content-description .title {
+    font-size: 3.5rem;
+    margin-block: 1rem;
+}
+
+main .content .content-description p {
+    line-height: 1.7rem;
+    font-size: 1.2rem;
+}
+
+main .content .content-description button {
+    padding: .8rem 2.5rem;
+    margin-block-start: 1rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 1rem;
+    font-family: 'Quicksand', sans-serif;
+    color: white;
+
+    border: 3px solid transparent;
+    border-radius: 999px;
+    background-color: #2D3E50;
+    cursor: pointer;
+    transition: all .15s ease-in;  /* belum paham */
+}
+
+main .content .content-image {  /* belum paham fungsi seluruh deskripsi */
+    flex: 1;
+    display: flex;
+}
+
+main .content .content-image img {
+    margin: auto;
+    min-width: 250px;
+    width: 300px;
+}
